# MAI_verb

./: .gitignore  BUILD_STATUS.md  BUILD_WINDOWS.md  CHANGELOG.md  CMakeLists.txt  CMakeLists_original.txt  CODESIGN_FREE.md  DISTRIBUTION_GUIDE.md  GITHUB_RELEASE_INSTRUCTIONS.md  INDEX.md  INSTALL_INSTRUCTIONS.md  INSTALL_LINUX.md  INSTALL_WINDOWS.md  JuceProject.jucer  JuceProject.jucer.new  PLUGIN_README.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_START.txt  README.md  README_OLD.md  RELEASE_NOTES_v0.1.1.md  RELEASE_NOTES_v0.1.md  START_HERE.txt  TECHNICAL.md  build.sh  build_diagnostics.sh  build_windows.bat  create_package.ps1  create_package.sh  init_github_repo.sh  prepare_release.sh  prepare_release_linux.sh  prepare_release_old.sh  prepare_release_windows.ps1  quick_setup.sh  remove_quarantine.sh  setup.sh  sign_plugins.sh
BricastiM7_Clone/: BricastiM7.jucer  BricastiM7_old2.jucer  CMakeLists.txt  GENERATE_CERTIFICATE.md  README.md  build_m7.sh  build_m7_new.sh  cert.pem  key.pem  test_main.cpp  vscode:c_cpp_properties.json  vscode_tasks.json
BricastiM7_Clone/JuceLibraryCode/: AppConfig.h  JuceHeader.h  JucePluginDefines.h
BricastiM7_Clone/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
BricastiM7_Clone/Source/DSP/: EarlyReflections.cpp  EarlyReflections.h  FDN8x8.cpp  FDN8x8.h  M7EQ.cpp  M7EQ.h  M7Modulation.cpp  M7Modulation.h  M7Parameters.h  M7ReverbEngine.cpp  M7ReverbEngine.h
BricastiM7_Clone/Source/Presets/: M7FactoryPresets.cpp  M7FactoryPresets.h
BricastiM7_Clone/Source/UI/: M7LookAndFeel.h
BricastiM7_Clone_New/: BricastiM7.jucer  CMakeLists.txt
BricastiM7_Clone_New/JuceLibraryCode/: AppConfig.h  JuceHeader.h  JucePluginDefines.h
BricastiM7_Clone_New/Source/: PluginEditor.h
BricastiM7_Clone_New/Source/DSP/: EarlyReflections.cpp  EarlyReflections.h  FDN4x4.cpp  FDN4x4.h  M7Modulation.cpp  M7ReverbEngine.cpp
BricastiM7_Clone_New/Source/UI/: M7LookAndFeel.cpp  M7LookAndFeel.h
BricastiM7_Fixed/: BricastiM7.jucer  CMakeLists.txt
BricastiM7_Fixed/Source/: PluginEditor.cpp  PluginProcessor.cpp  PluginProcessor.h
BricastiM7_Fixed/Source/DSP/: M7EQ.cpp  M7EQ.h  M7Modulation.h  M7Parameters.h  M7ReverbEngine.cpp  M7ReverbEngine.h
BricastiM7_Fixed/Source/Presets/: M7FactoryPresets.cpp  M7FactoryPresets.h
IR_Samples/: README.md
releases/MAI_verb_v0.1.1_Windows_x64/: INSTALLATION.txt
releases/MAI_verb_v0.1.1_Windows_x64/Bricasti M7.vst3/Contents/Resources/: moduleinfo.json
releases/MAI_verb_v0.1.1_Windows_x64/Bricasti M7.vst3/Contents/x86-win/: Bricasti M7.vst3
source/: PluginEditor.cpp  PluginProcessor.cpp
source/DSP/: ConvolutionEngine.cpp  IRLoader.cpp  ParameterController.cpp
source/Presets/: M7Presets.xml
source/UI/: CustomLookAndFeel.cpp
source/include/: JuceHeader.h  PluginEditor.h  PluginProcessor.h
source/include/DSP/: ConvolutionEngine.h  CrossPlatformUtils.h  IRLoader.h  ParameterController.h  SampleRateConfig.h
source/include/UI/: CustomLookAndFeel.h
test/: test.RPP  test.RPP-bak
